--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
 -->
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="#{project.name}">Sample App</title>
+    <title th:text="#{project.name}">Sample App on OpenShift</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
@@ -28,7 +28,7 @@
 <div class="container">
     <div class="page-header">
         <h1 th:text="#{project.name}">Sample App</h1>
-        <p class="lead">Demo application for showing how to run a <a href="http://projects.spring.io/spring-boot/">Spring Boot</a> application on <a href="https://openshift.com">OpenShift</a>.</p>
+        <p class="lead">OpenShift !! Demo application for showing how to run a <a href="http://projects.spring.io/spring-boot/">Spring Boot</a> application on <a href="https://openshift.com">OpenShift</a>.</p>
         <p>The code is open source at <a href="https://github.com/codecentric/springboot-sample-app">GitHub</a>. You're currently looking at version <span th:text="#{project.version}">0.0.1</span>.</p>
     </div>
 
